exports[`Dialog renders correctly 1`] = `
<div
  class="kcnBeL">
  <div />
  <div>
    <div
      class="mc-dialog--header">
      <div />
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body" />
    <div
      class="mc-dialog--footer">
      <div
        class="jstwKs">
        <button
          class="bEIpTZ">
          Cancel
        </button>
      </div>
      <div
        class="jstwKs">
        <button
          class="eYcGJg">
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders modal 1`] = `
<div
  class="kcnBeL">
  <div />
  <div>
    <div
      class="mc-dialog--header">
      <div />
    </div>
    <div
      class="mc-dialog--body" />
    <div
      class="mc-dialog--footer">
      <div
        class="jstwKs">
        <button
          class="bEIpTZ">
          Cancel
        </button>
      </div>
      <div
        class="jstwKs">
        <button
          class="eYcGJg">
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders with props 1`] = `
<div
  class="cERukp"
  open="">
  <div />
  <div>
    <div
      class="mc-dialog--header">
      <div>
        Dialog Title
      </div>
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body">
      Hello Dialog!
    </div>
    <div
      class="mc-dialog--footer">
      <div
        class="jstwKs">
        <button
          class="bEIpTZ">
          Cancel
        </button>
      </div>
      <div
        class="jstwKs">
        <button
          class="eYcGJg">
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;
